--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
-h1 {
-    color: red;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Tahoma, Verdana, sans-serif;
+}
+
+body {
+    background-color: white;
+    max-width: 1400px;
+    margin: auto;
+}
+
+header {
+    text-align: center;
+    height: 80px;
+    padding: 40px;
+    color: rgb(94, 92, 89);
 }
