--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,12 @@ header h1 {
   background-color: white;
   color: midnightblue;
   box-shadow: 5px 5px 5px 5px lightgray;
+  opacity: 0.5;
+  transition: opacity 0.3s ease;
+}
+
+.card:hover {
+    opacity: 1;
 }
 
 .card img {
@@ -51,6 +57,10 @@ header h1 {
 
 #penelope-list {
     list-style-type: none;
+}
+
+li:hover {
+    color: #1182EB;
 }
 
 #peter-insta {
