--- a/flex_challenge_1/styles.css
+++ b/flex_challenge_1/styles.css
@@ -4,29 +4,40 @@
     padding: 0;
 }
 
-header {
-    background-color: black;
-    color: white;
+header, header * {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    height: 50px;
 }
 
 header {
     justify-content: space-between;
+    background-color: black;
+    color: white;
 }
 
 #Nology {
     background-color: green;
     font-size: 0.5em;
-    height: 30px;
-    width: 100px;
-    align-items: center;
     text-align: center;
+    width: 85px;
 }
 
 a {
     color: white;
-    padding: 50px;
-    
+    height: 50px;
+    width: 75px;
+
 }
+
+.list1 {
+    padding: 50px;
+}
+
+a:hover {
+    background-color: gray;
+    color: blue;
+}
+
+
