--- a/flex_challenge_1/styles.css
+++ b/flex_challenge_1/styles.css
@@ -40,4 +40,41 @@ a:hover {
     color: blue;
 }
 
+.panel {
+    border: 3px solid black;
+}
 
+main {
+    height: 500px;
+    display: flex;
+    margin: 25px auto;
+    width: 95%;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+ 
+
+}
+
+#left {
+    padding: 30px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.panel {
+    height: 25%;
+    padding: 20px;
+}
+
+#rpanel {
+    width: 25%;
+    padding: 15px;
+    border: 3px solid black;
+}
+
+p {
+    text-align: justify;
+}
