--- a/sandbox/sass-bem/main.css
+++ b/sandbox/sass-bem/main.css
@@ -28,8 +28,29 @@ nav a {
   border-radius: 10px;
 }
 
-main * {
+main {
+  height: 500px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 10px;
+}
+
+main h2, h3, a {
+  padding: 10px;
+}
+
+main h2 {
+  color: #176bd3;
+  text-decoration: bold;
+  font-size: 200%;
+}
+
+main a {
+  color: white;
+  background-color: orange;
+  border-radius: 10px;
+  width: 100px;
+  text-align: center;
 }
