--- a/sandbox/sass-bem/main.css
+++ b/sandbox/sass-bem/main.css
@@ -1,56 +1,60 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto&display=swap");
 * {
-  background-color: white;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  color: #333333;
 }
 
-nav, nav * {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: midnightblue;
-  height: 50px;
+a:link,
+a:visited {
+  text-decoration: none;
 }
 
 nav {
-  justify-content: space-between;
-  padding: 5px;
-}
-
-nav h1 {
-  color: white;
-}
-
-nav a {
-  background-color: orange;
-  padding: 1px;
-  width: 100px;
-  color: white;
-  border-radius: 10px;
-}
-
-main {
-  height: 500px;
+  height: 10vh;
+  background-color: #28527a;
+  padding: 0 40px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  font-family: "Dancing Script", sans-serif;
+  font-size: 20px;
+  color: #fafafa;
+}
+
+.button {
+  display: block;
+  width: 100px;
+  background-color: #f0a500;
+  text-align: center;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fafafa;
+}
+
+header {
+  height: 90vh;
+  display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
 }
-
-main h2, h3, a {
-  padding: 10px;
-}
-
-main h2 {
-  color: #176bd3;
-  text-decoration: bold;
-  font-size: 200%;
-}
-
-main a {
-  color: white;
-  background-color: orange;
-  border-radius: 10px;
-  width: 100px;
+header div {
   text-align: center;
+}
+header div h1 {
+  color: #28527a;
+  font-size: 50px;
+}
+header div h2 {
+  font-family: "Dancing Script", sans-serif;
+  font-size: 25px;
+  margin: 20px 0;
+}
+header div a {
+  margin: 0 auto;
 }
