--- a/sandbox/sass-bem/main.scss
+++ b/sandbox/sass-bem/main.scss
@@ -1,57 +1,73 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto&display=swap");
+
+$font-body: "Roboto", sans-serif;
+$font-display: "Dancing Script", sans-serif;
+
+$color-primary: #28527a;
+$color-secondary: #f0a500;
+$color-black: #333333;
+$color-white: #fafafa;
+
 * {
-    background-color: white;
-    margin: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: $font-body;
+  color: $color-black;
 }
 
-nav, nav * {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: midnightblue;
-    height: 50px;
+a:link,
+a:visited {
+  text-decoration: none;
 }
 
 nav {
-    justify-content: space-between;
-    padding: 5px;
+  height: 10vh;
+  background-color: $color-primary;
+  padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-nav h1 {
-    color: white;
+.logo {
+  font-family: $font-display;
+  font-size: 20px;
+  color: $color-white;
 }
 
-nav a {
-    background-color: orange;
-    padding: 1px;
-    width: 100px;
-    color: white;
-    border-radius: 10px;
+.button {
+  display: block;
+  width: 100px;
+  background-color: $color-secondary;
+  text-align: center;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: $color-white;
 }
 
+header {
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-main {
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-}
-
-main h2, h3, a {
-    padding: 10px;
-}
-
-main h2 {
-    color: rgb(23, 107, 211);
-    text-decoration: bold;
-    font-size: 200%;
-}
-
-main a {
-    color: white;
-    background-color: orange;
-    border-radius: 10px;
-    width: 100px;
+  div {
     text-align: center;
+
+    h1 {
+      color: $color-primary;
+      font-size: 50px;
+    }
+
+    h2 {
+      font-family: $font-display;
+      font-size: 25px;
+      margin: 20px 0;
+    }
+
+    a {
+      margin: 0 auto;
+    }
+  }
 }
