--- a/intro-to-web-project/style.scss
+++ b/intro-to-web-project/style.scss
@@ -90,7 +90,21 @@ main {
         font-size: 1.3em;
     }
 
+}
 
+#here-find {
+    margin: 25px;
+}
+
+.find-d {
+    display: flex;
+    align-items: center;
+    margin: 15px;
+}
+
+.find-start {
+    font-weight: bolder;
+    font-size: 1.2em;
 }
 
 .button {
