--- a/intro-to-web-project/style.scss
+++ b/intro-to-web-project/style.scss
@@ -121,3 +121,20 @@ main {
     border-radius: 8px;
     font-weight: bolder;
 }
+
+footer {
+    background-color: rgb(224, 231, 186); 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    color: $primary-color;
+
+    a:link, a:visited {
+        color: $primary-color;
+    }
+}
+footer * {
+    padding: 20px;
+}
