--- a/intro-to-web-project/style.scss
+++ b/intro-to-web-project/style.scss
@@ -1,140 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Francois+One&display=swap');
-
-$primary-font: 'baloo 2', cursive;
-$primary-color: rgb(25, 25, 88);
-$secondary-color: rgb(50, 186, 231);
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: $primary-font;
-}
-
-a:link, a:visited {
-    text-decoration: none;
-    color: white;
-    font-family: $primary-font;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 25px;
-    h1 {
-    font-family: 'Francois One', sans-serif;
-    color: $primary-color;
-    font-size: 4em;
-  }
-  h1::before{
-    content:url(images/penguin1.svg);
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
-nav * {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#login {
-    border: 2px solid $primary-color;
-    border-radius: 5px;
-    padding: 10px 30px;
-    font-size: 1.5em;
-    font-weight: bolder;
-    color: $primary-color;
-}
-
-main {
-
-    #t-line {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-
-        a {
-            padding: 15px 50px;
-        }
-    }
-    #t-line * {
-        padding: 25px;
-    }
-
-    h2 {
-        color: $secondary-color;
-        font-size: 3em;
-        font-weight: bolder;
-
-    }
-
-    #s-blue {
-        font-size: 2em;
-        padding: 10px;
-    }
-
-    h3 {
-        color: $primary-color;
-        font-size: 2.2em;
-        font-weight: bolder;
-    }
-
-    p {
-        color: $primary-color;
-        font-size: 1.3em;
-    }
-
-    #button-2 {
-        display: flex;
-        justify-content: center;
-        padding: 20px;
-        a {
-            padding: 10px 50px;
-        }
-    }
-
-}
-
-#here-find {
-    margin: 25px;
-}
-
-.find-d {
-    display: flex;
-    align-items: center;
-    margin: 15px;
-}
-
-.find-start {
-    font-weight: bolder;
-    font-size: 1.2em;
-}
-
-.button {
-    background-color: $primary-color;
-    border-radius: 8px;
-    font-weight: bolder;
-}
-
-footer {
-    background-color: rgb(224, 231, 186); 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 2em;
-    color: $primary-color;
-
-    a:link, a:visited {
-        color: $primary-color;
-    }
-}
-footer * {
-    padding: 20px;
-}
+@import "_base.scss";
+@import "_nav.scss";
+@import "_main.scss";
+@import "_button.scss";
+@import "_footer.scss";
