--- a/intro-to-web-project/_main.scss
+++ b/intro-to-web-project/_main.scss
@@ -59,6 +59,11 @@ main {
     align-items: center;
     justify-content: center;
     margin: 15px;
+    #find-it {
+        font-style:italic;
+        font-size: 0.9em;
+        font-weight: lighter;
+    }
 }
 
 .find-start {
